; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libvita2d/source/extr_vita2d_texture.c_vita2d_draw_texture_tint_scale.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libvita2d/source/extr_vita2d_texture.c_vita2d_draw_texture_tint_scale.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vita2d_draw_texture_tint_scale(i32* %0, float %1, float %2, float %3, float %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca float, align 4
  %9 = alloca float, align 4
  %10 = alloca float, align 4
  %11 = alloca float, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store float %1, float* %8, align 4
  store float %2, float* %9, align 4
  store float %3, float* %10, align 4
  store float %4, float* %11, align 4
  store i32 %5, i32* %12, align 4
  %13 = call i32 (...) @set_texture_tint_program()
  %14 = call i32 (...) @set_texture_wvp_uniform()
  %15 = load i32, i32* %12, align 4
  %16 = call i32 @set_texture_tint_color_uniform(i32 %15)
  %17 = load i32*, i32** %7, align 8
  %18 = load float, float* %8, align 4
  %19 = load float, float* %9, align 4
  %20 = load float, float* %10, align 4
  %21 = load float, float* %11, align 4
  %22 = call i32 @draw_texture_scale_generic(i32* %17, float %18, float %19, float %20, float %21)
  ret void
}

declare dso_local i32 @set_texture_tint_program(...) #1

declare dso_local i32 @set_texture_wvp_uniform(...) #1

declare dso_local i32 @set_texture_tint_color_uniform(i32) #1

declare dso_local i32 @draw_texture_scale_generic(i32*, float, float, float, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
